# sdk-rust

./: Cargo.toml
.github/workflows/: test.yml
examples/: .env
examples/get/: Cargo.toml
examples/get/src/: main.rs
examples/send/: Cargo.toml
examples/send/src/: main.rs
sdk/: Cargo.toml
sdk/src/: admin.rs  lib.rs
sdk/tests/: client_test.rs
src/: lib.rs
