[package]
name = "sailhouse"
version = "0.1.0"
edition = "2021"
description = "Official Sailhouse client for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.11.20"
features = ["json"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.107"
