[package]
name = "sailhouse"
version = "0.1.0"
edition = "2021"
description = "Official Sailhouse client for Rust"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.11.20"
features = ["json"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.107"

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
